--- a/app/src/main/res/layout/activity_quadratic.xml
+++ b/app/src/main/res/layout/activity_quadratic.xml
@@ -123,7 +123,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/calculate"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:onClick="onClickCalculate"/>
 
     </LinearLayout>
 
