Added rough decimal output, including styling and a clearbutton implementation, also removed unneeded calculation method call that really should have been private in the app

--- a/app/src/main/res/layout/activity_quadratic.xml
+++ b/app/src/main/res/layout/activity_quadratic.xml
@@ -126,6 +126,15 @@
 
     </LinearLayout>
 
-    <!-- TODO: Add the decimal output -->
+    <!-- Decimal output -->
+    <TextView
+        android:id="@+id/decimalTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:layout_marginTop="7dp"
+        android:text="@string/defaultDecimal"/>
+
     <!-- TODO: Do the Ad -->
 </LinearLayout>
