--- a/app/src/main/res/layout/activity_quadratic.xml
+++ b/app/src/main/res/layout/activity_quadratic.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lunarempire.quadraticapp.QuadraticActivity"
+    tools:context="com.lunarempire.quadraticapp.QuadraticActivity"
     android:orientation="vertical">
 
     <WebView
@@ -141,4 +142,17 @@
 
 
     <!-- TODO: Do the Ad -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="bottom"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/secret_admob_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+
 </LinearLayout>
